fix: correct spacing of search input

--- a/news-explorer-frontend/src/components/SearchForm/SearchForm.css
+++ b/news-explorer-frontend/src/components/SearchForm/SearchForm.css
@@ -80,7 +80,7 @@
    .search-form__input {
     width: 448px;
     height: 56px;
-    padding: 21px 194px 21px 24px;
+    padding: 17px 194px 17px 24px;
   }
 
   .search-form__btn {
